--- a/style.css
+++ b/style.css
@@ -1,21 +1,25 @@
-img{
+img {
     width: 200px;
 
 }
-.cabecalho{
+
+.cabecalho {
     width: 200px;
     height: 100px;
     background-color: green;
 
 
 }
-.primeirasecao{
-  width: 1000px;
-  height: 550px;
-  background-color: magenta;
+
+.primeirasecao {
+    display: flex;
+    width: 1000px;
+    height: 550px;
+    background-color: magenta;
 
 }
-.divisao{
+
+.divisao {
     width: 300px;
     height: 150px;
     background-color: skyblue;
